--- a/package.json
+++ b/package.json
@@ -67,9 +67,11 @@
   },
   "devDependencies": {
     "babel": "6.23.0",
+    "babel-cli": "^6.26.0",
     "babel-core": "6.26.0",
     "babel-eslint": "^8.2.2",
     "babel-jest": "^23.6.0",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "6.24.1",
     "dictum.js": "^1.0.0",
     "dotenv": "^5.0.1",
@@ -82,7 +84,7 @@
     "eslint-plugin-prettier": "^3.0.1",
     "husky": "^0.14.3",
     "istanbul": "^0.4.3",
-    "jest": "^24.0.0",
+    "jest": "^24.9.0",
     "mocha": "^5.0.1",
     "mocha-lcov-reporter": "^1.2.0",
     "nodemon": "^1.18.7",
@@ -90,6 +92,7 @@
     "prettier-eslint": "^8.8.2",
     "prompt": "^1.0.0",
     "sequelize-cli": "^4.0.0",
+    "superagent": "^5.1.0",
     "supertest": "^3.4.2"
   }
 }
