--- a/package.json
+++ b/package.json
@@ -60,7 +60,8 @@
     "express": "^4.16.2",
     "express-validator": "^6.2.0",
     "express-wolox-logger": "0.0.2",
-    "jwt-simple": "^0.5.1",
+    "jsonwebtoken": "^8.5.1",
+    "jwt-simple": "^0.5.6",
     "pg": "^7.4.1",
     "request-promise": "^4.2.4",
     "sequelize": "^4.34.0",
